[gd_scene load_steps=8 format=3 uid="uid://dkl8cpei68bs1"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_lcyc1"]
[ext_resource type="Texture2D" uid="uid://dp505l8ekxbut" path="res://Assets/AloeChar/terminator-dead/idle/0.png" id="2_diwv4"]
[ext_resource type="Texture2D" uid="uid://bov2y4kjy6h3s" path="res://Assets/AloeChar/terminator-dead/idle/1.png" id="3_fq6hx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wxktc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_diwv4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fq6hx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kuob0"]
radius = 5.09902

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ruhl"]
size = Vector2(150825, 190815)

[sub_resource type="CircleShape2D" id="CircleShape2D_xgieb"]
radius = 6.0

[node name="MoreEnemy" type="CharacterBody2D"]
position = Vector2(-15122, 359)
script = ExtResource("1_lcyc1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.499999, 0)
scale = Vector2(0.59375, 0.5)
sprite_frames = SubResource("SpriteFrames_wxktc")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kuob0")

[node name="detectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(8856.99, 2779)
rotation = -1.57058
shape = SubResource("RectangleShape2D_6ruhl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xgieb")

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
